--- a/MijnSocialPlan/MijnSocialPlan/Web.Release.config
+++ b/MijnSocialPlan/MijnSocialPlan/Web.Release.config
@@ -14,6 +14,15 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add 
+      name="MijnSocialPlanDbContext" 
+      connectionString="Server=tcp:v4quwyhimq.database.windows.net,1433;Database=mijnsocialplan_db;User ID=VeilingHuisDbUSer;Password=qedyYjdsd6;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;PersistSecurityInfo=true" 
+      providerName="System.Data.SqlClient"
+      xdt:Transform="Replace" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
