--- a/MijnSocialPlan/MijnSocialPlan/Web.config
+++ b/MijnSocialPlan/MijnSocialPlan/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MijnSocialPlanDbContext" connectionString="Server=tcp:v4quwyhimq.database.windows.net,1433;Database=mijnsocialplan_db;User ID=VeilingHuisDbUSer;Password=qedyYjdsd6;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;PersistSecurityInfo=true" providerName="System.Data.SqlClient" />
+    <add 
+      name="MijnSocialPlanDbContext" 
+      connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MijnSocialPlan-20140513030825.mdf;Initial Catalog=aspnet-MijnSocialPlan-20140513030825;Integrated Security=True"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
