--- a/MijnSocialPlan/MijnSocialPlan/MijnSocialPlan.csproj
+++ b/MijnSocialPlan/MijnSocialPlan/MijnSocialPlan.csproj
@@ -180,8 +180,58 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\bevestig_prive.png" />
+    <Content Include="Content\Images\bylj_facebook.png" />
     <Content Include="Content\Images\clouds-vector-backgrounds.jpg" />
+    <Content Include="Content\Images\donsje_facebook.png" />
     <Content Include="Content\Images\fb1.png" />
+    <Content Include="Content\Images\infographic_facebook.png" />
+    <Content Include="Content\Images\infographic_tweet.png" />
+    <Content Include="Content\Images\info_bedrijf.png" />
+    <Content Include="Content\Images\jorg_facebook.png" />
+    <Content Include="Content\Images\museumwinkel_facebook.png" />
+    <Content Include="Content\Images\mwah_facebook.png" />
+    <Content Include="Content\Images\omslag_toevoegen.png" />
+    <Content Include="Content\Images\paginas.png" />
+    <Content Include="Content\Images\pagina_maken.png" />
+    <Content Include="Content\Images\pagina_zakelijk.png" />
+    <Content Include="Content\Images\pdf.png" />
+    <Content Include="Content\Images\shutterstock_116229424.jpg" />
+    <Content Include="Content\Images\soort_bedrijf.png" />
+    <Content Include="Content\Images\stap1_bedrijf.png" />
+    <Content Include="Content\Images\stap1_prive.png" />
+    <Content Include="Content\Images\stap2_bedrijf.png" />
+    <Content Include="Content\Images\stap2_prive.png" />
+    <Content Include="Content\Images\stap3_bedrijf.png" />
+    <Content Include="Content\Images\stap3_prive.png" />
+    <Content Include="Content\Images\stap4_bedrijf.png" />
+    <Content Include="Content\Images\status_evenementmijlpaal.png" />
+    <Content Include="Content\Images\status_fotovideo.png" />
+    <Content Include="Content\Images\status_liken.png" />
+    <Content Include="Content\Images\status_notificatie.png" />
+    <Content Include="Content\Images\status_reageren.png" />
+    <Content Include="Content\Images\status_vak.png" />
+    <Content Include="Content\Images\status_vak_actief.png" />
+    <Content Include="Content\Images\status_vak_fototoevoegen.png" />
+    <Content Include="Content\Images\tweet_plaatsen_knop.png" />
+    <Content Include="Content\Images\tweet_veld.png" />
+    <Content Include="Content\Images\tweet_voorbeeld.png" />
+    <Content Include="Content\Images\tweet_voorbeeld.png.jpg" />
+    <Content Include="Content\Images\twitter_bevestig.png" />
+    <Content Include="Content\Images\twitter_gebruikersnaam.png" />
+    <Content Include="Content\Images\twitter_home.png" />
+    <Content Include="Content\Images\twitter_instellingen.png" />
+    <Content Include="Content\Images\twitter_instellingen_knop.png" />
+    <Content Include="Content\Images\twitter_persoonlijker.png" />
+    <Content Include="Content\Images\twitter_registreer_nu.png" />
+    <Content Include="Content\Images\twitter_tijdlijn.png" />
+    <Content Include="Content\Images\twitter_trends.png" />
+    <Content Include="Content\Images\twitter_welkom.png" />
+    <Content Include="Content\Images\twitter_zoek_vrienden.png" />
+    <Content Include="Content\Images\voltooien_bedrijf.png" />
+    <Content Include="Content\Images\voorbeeld_omslag.png" />
+    <Content Include="Content\Images\zbmo_model.png" />
+    <Content Include="Content\Images\zevenstappenmodel.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
