--- a/MijnSocialPlan/MijnSocialPlan/MijnSocialPlan.csproj
+++ b/MijnSocialPlan/MijnSocialPlan/MijnSocialPlan.csproj
@@ -238,6 +238,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\Social-contentHandleiding.pdf" />
     <None Include="Properties\PublishProfiles\mijnsocialplan %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\mijnsocialplan.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
